Improve js-loading screen

--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,9 @@
         You need to enable JavaScript to run this app.
     </div>
 </noscript>
-<div id="root">
-    <div class="FullPageLoader">
-        <img width="30" src="%PUBLIC_URL%/I14_White.png" alt="I14 Logo"/>
-    </div>
+<div class="FullPageLoader">
+    <img width="30" src="%PUBLIC_URL%/I14_White.png" alt="I14 Logo"/>
 </div>
+<div id="root"></div>
 </body>
 </html>
